--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -146,6 +146,7 @@
   "botsPremiumNote": "You've uncovered a Deluxe feature! <0>Read more about custom bots here.</0>",
   "botClearToken": "Clear Token",
   "botInteractionUrl": "Interactions Endpoint URL",
+  "backToBots": "Back to Bots",
   "botName": "Bot Name",
   "deleteBot": {
     "title": "Delete Bot",
