--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -146,7 +146,13 @@
   "botsPremiumNote": "You've uncovered a Deluxe feature! <0>Read more about custom bots here.</0>",
   "botClearToken": "Clear Token",
   "botInteractionUrl": "Interactions Endpoint URL",
+  "botInteractionUrlNote": "Paste this in the \"General Information\" section in the <0>Discord Developer Portal</0> so that your bot can respond to users.",
   "backToBots": "Back to Bots",
+  "commands": "Commands",
+  "appSecretCheck": "Client Secret <0/>",
+  "appSecretUsageNote": "In order to register commands, You need to provide either a client secret or a bot token. If you provide a bot token, you don't need the client secret.",
+  "appClearSecret": "Clear Secret",
+  "appSecretHiddenNote": "For security reasons, your secret is never shown to you after you save it here. If you have since reset your client secret, press \"Clear Secret\" and then re-save it.",
   "botName": "Bot Name",
   "deleteBot": {
     "title": "Delete Bot",
