feat(site): proper rtl spacing in more places

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -1,12 +1,16 @@
 {
   "settings": "Settings",
   "help": "Help",
+  "search": "Search",
+  "helpSearchPlaceholder": "How do I ...",
   "logIn": "Log In",
   "logOut": "Log Out",
   "name": "Name",
   "save": "Save",
+  "ok": "OK",
   "edit": "Edit",
   "delete": "Delete",
+  "supportServer": "Support Server",
   "editBackupTitle": "Edit Backup Details",
   "editBackupMessages": "To edit the messages in a backup, click the <0/> button.",
   "saveMessageTitle": "Save Message",
@@ -41,7 +45,11 @@
   "successResultTroubleshoot": "If you cannot see the message, make sure it wasn't deleted by another bot. Some moderation bots consider all webhook messages to be spam by default.",
   "theme": "Theme",
   "messageDisplay": "Message Display",
+  "cozy": "Cozy",
+  "compact": "Compact",
+  "compactAvatars": "Show avatars in Compact mode",
   "editorPanes": "Editor Panes",
+  "forceDualPane": "Always use dual-pane editor",
   "language": "Language",
   "locales": {
     "ar": "Arabic",
@@ -138,6 +146,8 @@
     "step3": "In the \"General Information\" tab (selected by default), tap \"Copy\" under \"Application ID\"",
     "step4": "Paste in the box:"
   },
+  "applicationId": "Application ID",
+  "noDescription": "No description",
   "portal": "Portal",
   "botTokenCheck": "Bot Token <0/>",
   "botNoTokenNote": "Providing a bot token is optional. When a token is set, your bot can perform actions independently of Discohook Utils.",
@@ -170,7 +180,7 @@
   "embedsTooLarge": "Embeds must contain at most 6000 characters total (currently {{count}} too many)",
   "history": "History",
   "noHistory": "This editor session has no history recorded.",
-  "historyDescription": "This is cleared whenever the editor is loaded. If you need to store messages persistently, use the \"Save Message\" button.",
+  "historyNote": "Here you can view and manage the past 15 autosaved instances of editor history (or 30 with Deluxe). Pressing \"Reset Editor\" will reset everything in the left pane, but it will not wipe history (until it is overwritten by your new changes). Just remember that history is <bold>not persisted</bold> when you reload the page.",
   "resetEditor": "Reset Editor",
   "resetEditorWarning": "Click to confirm",
   "resetFinished": "Reset Finished",
