--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -103,6 +103,7 @@
   "version": "Version: {{version}}",
   "shareLinks": "Share Links",
   "noLinks": "You haven't created any share links.",
+  "refreshShareLink": "Refresh the share link for another 2 weeks (Deluxe feature!)",
   "id": "ID: {{id}}",
   "noShareLinkData": "Share link data is not kept after expiration. If you need to permanently store a message, use <backups>Backups</backups> instead.",
   "subscribedSince": "Subscribed Since",
