feat(site): localize guild page, webhook editor

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -41,7 +41,7 @@
   "messageId": "Message ID: <0/>",
   "channelId": "Channel ID: <0/>",
   "guildId": "Server ID: <0/>",
-  "createdAt": "Created at: {{createdAt}}",
+  "createdAt": "Created on {{ createdAt, MMM D, YYYY }}",
   "successResultTroubleshoot": "If you cannot see the message, make sure it wasn't deleted by another bot. Some moderation bots consider all webhook messages to be spam by default.",
   "theme": "Theme",
   "messageDisplay": "Message Display",
@@ -61,7 +61,7 @@
   },
   "webhookUrl": "Webhook URL",
   "invalidWebhookUrl": "Invalid webhook URL. They start with https://discord.com/api/webhooks/...",
-  "createdAtBy": "Created {{createdAt}} by {{username}}",
+  "createdAtBy": "Created on {{ createdAt, MMM D, YYYY }} by {{username}}",
   "someone": "someone",
   "addWebhook": "Add Webhook",
   "createWebhook": "Create Webhook",
@@ -122,6 +122,59 @@
   "noServers": "You don't appear to share any servers with Discohook Utils.",
   "inviteBot": "Invite Bot",
   "addToServer": "Add to Server",
+  "home": "Home",
+  "justBeAMember": "Just be a member",
+  "webhooks": "Webhooks",
+  "auditLog": "Audit Log",
+  "tab": "Tab",
+  "permissions": "Permissions",
+  "permission": {
+    "CreateInstantInvite": "Create Invites",
+    "KickMembers": "Kick Members",
+    "BanMembers": "Ban Members",
+    "Administrator": "Administrator",
+    "ManageChannels": "Manage Channels",
+    "ManageGuild": "Manage Server",
+    "AddReactions": "Add Reactions",
+    "ViewAuditLog": "View Audit Log",
+    "PrioritySpeaker": "Priority Speaker",
+    "Stream": "Stream",
+    "ViewChannel": "View Channels",
+    "SendMessages": "Send Messages",
+    "SendTTSMessages": "Send TTS Messages",
+    "ManageMessages": "Manage Messages",
+    "EmbedLinks": "Embed Links",
+    "AttachFiles": "Attach Files",
+    "ReadMessageHistory": "Read Message History",
+    "MentionEveryone": "Mention Everyone",
+    "UseExternalEmojis": "Use External Emojis",
+    "ViewGuildInsights": "View Guild Insights",
+    "Connect": "Connect",
+    "Speak": "Speak",
+    "MuteMembers": "Mute Members",
+    "DeafenMembers": "Deafen Members",
+    "MoveMembers": "Move Members",
+    "UseVAD": "Use VAD",
+    "ChangeNickname": "Change Nickname",
+    "ManageNicknames": "Manage Nicknames",
+    "ManageRoles": "Manage Roles",
+    "ManageWebhooks": "Manage Webhooks",
+    "ManageEmojisAndStickers": "Manage Emojis & Stickers",
+    "UseApplicationCommands": "Use App Commands",
+    "RequestToSpeak": "Request to Speak",
+    "ManageEvents": "Manage Events",
+    "ManageThreads": "Manage Threads",
+    "CreatePublicThreads": "Create Public Threads",
+    "CreatePrivateThreads": "Create Private Threads",
+    "UseExternalStickers": "Use External Stickers",
+    "SendMessagesInThreads": "Send Messages in Threads",
+    "UseEmbeddedActivities": "Use Embedded Activities",
+    "ModerateMembers": "Moderate Members",
+    "ViewCreatorMonetizationAnalytics": "View Creator Monetization Analytics",
+    "UseSoundboard": "Use Soundboard",
+    "UseExternalSounds": "Use External Sounds",
+    "SendVoiceMessages": "Send Voice Messages"
+  },
   "scheduling": "Scheduling",
   "scheduleBackup": "Schedule this backup",
   "repeating": "Repeating",
