--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -123,9 +123,11 @@
   "inviteBot": "Invite Bot",
   "addToServer": "Add to Server",
   "home": "Home",
+  "homeWelcome": "Welcome to the homepage. Depending on your permissions in this server, you will be able to access various tabs in the <narrow>top bar</narrow><wide>sidebar</wide>.",
   "justBeAMember": "Just be a member",
   "webhooks": "Webhooks",
   "auditLog": "Audit Log",
+  "auditLogSubtitle": "Below is a list of actions that have been taken through Discohook for <0>{{guild.name}}</0>. Some expected entries may not be present--for example if a webhook URL was leaked, it's not likely that the attacker would use Discohook.<br /><br />If you don't recognize a user, you may want to delete the webhook.",
   "tab": "Tab",
   "permissions": "Permissions",
   "permission": {
