feat(site): link to webhooks menu from index

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -86,7 +86,7 @@
   "editingLinkBackupNote": "You're editing a backup, so your work is saved periodically while you edit.",
   "channel": "Channel",
   "webhookChannelMentionAndThreads": "<#{{0}}> (and its threads)",
-  "cannotChangeChannel": "Webhook channel must be set inside Discord.",
+  "cannotChangeChannel": "Webhook channel must be set inside Discord or from the <0>server webhooks menu</0>.",
   "requestedBy": "Requested on Discohook by {{username}}",
   "resetAvatar": "Remove",
   "webhookCreated": "Webhook Created",
