chore(site): real date in `todayAt` i18n

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -249,7 +249,7 @@
   "historyRemove": "Remove from history",
 
   "defaultPlaceholder": "Make a selection",
-  "todayAt": "Today at {{time}}",
+  "todayAt": "Today at {{ date, h:mm A }}",
   "badge": {
     "app": "APP",
     "server": "SERVER"
