--- a/packages/site/app/i18n/en-GB.json
+++ b/packages/site/app/i18n/en-GB.json
@@ -1,4 +1,5 @@
 {
+  "todayAt": "Today at {{ date, H:mm }}",
   "timestamp": {
     "time": "{{ date, HH:mm }}",
     "time_verbose": "{{ date, HH:mm:ss }}",
