feat(site): localize flow editor, real flow roles

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -229,6 +229,61 @@
   "havingTrouble": "Having Trouble?",
   "troubleshootMessage": "If you press the send button and nothing happens, it may be because your browser is blocking connections to Discord, which is not uncommon for privacy-focused extensions like Privacy Badger. Try disabling privacy extensions or entering incognito/private mode.",
 
+  "setReference": "Set Reference",
+  "addEmbed": "Add Embed",
+  "addRow": "Add Row",
+  "components": "Components",
+  "addComponent": "Add Component",
+  "addComponents": "Add Components",
+  "componentsNoWebhook": "Component availability is dependent on the type of webhook that you send a message with. For link buttons, the webhook must be owned by a bot, but to send other buttons and select menus, the webhook must be owned by the Discohook application (this website/its bot). Add a webhook for more information.",
+  "componentsPossibleWebhook": "One or more of your webhooks are owned by an app, but not Discohook, so you can only add link buttons. Add a webhook owned by the Discohook bot to be able to use more types of components.",
+  "componentsNoUsableWebhook": "None of your webhooks are compatibile with components. Add a webhook owned by the Discohook bot.",
+  "button": "Button",
+  "linkButton": "Link Button",
+  "stringSelectMenu": "String Select Menu",
+  "userSelectMenu": "User Select Menu",
+  "roleSelectMenu": "Role Select Menu",
+  "mentionableSelectMenu": "User & Role Select Menu",
+  "channelSelectMenu": "Channel Select Menu",
+  "message": "Message",
+  "rowN": "Row {{n}}",
+  "buttonN": "Button {{n}}",
+  "buttonNText": "Button {{n}} - {{text}}",
+  "emoji": "Emoji",
+  "label": "Label",
+  "disabled": "Disabled",
+  "url": "URL",
+  "style": "Style",
+  "actionTypeText": "Action Type",
+  "actionType": {
+    "0": "Do nothing",
+    "1": "Wait for X seconds",
+    "2": "Check",
+    "3": "Add role",
+    "4": "Remove role",
+    "5": "Toggle role",
+    "6": "Send message",
+    "7": "Send webhook message",
+    "8": "Create thread",
+    "9": "Set variable",
+    "10": "Delete message"
+  },
+  "actionDescription": {
+    "1": "Wait for {{ action.seconds }} seconds",
+    "8": "Create thread named \"{{ action.name }}\"",
+    "9": "Set variable \"{{ action.name }}\""
+  },
+  "role": "Role",
+  "noRolesNote": "No roles available. While logged in, add a webhook or manually insert mentions in the message to populate this list.",
+  "seconds": "Seconds",
+  "deleteMessageIdNote": "A message with the ID of <0>messageId</0> will be deleted (specify a variable).",
+  "type": "Type",
+  "value": "Value",
+  "valueFromReturn": "Attribute of previous return",
+  "actionNType": "Action {{n}} - {{type}}",
+  "addFlow": "Add Flow",
+  "flowLink": "Flow (<0>what's a flow?</0>)",
+
   "rowEmpty": "Must contain at least one component (button/select)",
   "labelEmpty": "Must have a label or emoji, or both",
   "urlEmpty": "Link button must have a URL",
