feat(site): emoji category icons, select twemojis

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -238,14 +238,20 @@
   "componentsNoWebhook": "Component availability is dependent on the type of webhook that you send a message with. For link buttons, the webhook must be owned by a bot, but to send other buttons and select menus, the webhook must be owned by the Discohook application (this website/its bot). Add a webhook for more information.",
   "componentsPossibleWebhook": "One or more of your webhooks are owned by an app, but not Discohook, so you can only add link buttons. Add a webhook owned by the Discohook bot to be able to use more types of components.",
   "componentsNoUsableWebhook": "None of your webhooks are compatibile with components. Add a webhook owned by the Discohook bot.",
-  "button": "Button",
+  "component": {
+    "1": "Row",
+    "2": "Button",
+    "3": "Select Menu",
+    "4": "Text Input",
+    "5": "User Select Menu",
+    "6": "Role Select Menu",
+    "7": "User & Role Select Menu",
+    "8": "Channel Select Menu"
+  },
   "linkButton": "Link Button",
-  "stringSelectMenu": "String Select Menu",
-  "userSelectMenu": "User Select Menu",
-  "roleSelectMenu": "Role Select Menu",
-  "mentionableSelectMenu": "User & Role Select Menu",
-  "channelSelectMenu": "Channel Select Menu",
   "message": "Message",
+  "messageN": "Message {{n}}",
+  "messageNText": "Message {{n}} - {{text}}",
   "rowN": "Row {{n}}",
   "buttonN": "Button {{n}}",
   "buttonNText": "Button {{n}} - {{text}}",
