--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -295,9 +295,16 @@
   "type": "Type",
   "value": "Value",
   "valueFromReturn": "Attribute of previous return",
-  "actionNType": "Action {{n}} - {{type}}",
-  "addFlow": "Add Flow",
+  "actionN": "Action {{n}}",
+  "actionNText": "Action {{n}} - {{text}}",
   "flowLink": "Flow (<0>what's a flow?</0>)",
+  "addFlow": "Add Flow",
+  "editFlow": "Edit Flow",
+  "addAction": "Add Action",
+  "backup": "Backup",
+  "flagsOptional": "Flags (optional)",
+  "random": "Random",
+  "autoArchiveDuration": "Auto Archive Duration",
 
   "rowEmpty": "Must contain at least one component (button/select)",
   "labelEmpty": "Must have a label or emoji, or both",
