feat(site): localize more text

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -106,6 +106,7 @@
   "noLinks": "You haven't created any share links.",
   "refreshShareLink": "Refresh the share link for another 2 weeks (Deluxe feature!)",
   "id": "ID: {{id}}",
+  "idText": "ID",
   "noShareLinkData": "Share link data is not kept after expiration. If you need to permanently store a message, use <backups>Backups</backups> instead.",
   "subscribedSince": "Subscribed Since",
   "notSubscribed": "Not subscribed",
@@ -241,6 +242,8 @@
   "changeReference": "Change Reference",
   "addEmbed": "Add Embed",
   "addRow": "Add Row",
+  "addDefaultValue": "Add Default Value",
+  "addOption": "Add Option",
   "components": "Components",
   "addComponent": "Add Component",
   "addComponents": "Add Components",
@@ -289,14 +292,18 @@
     "9": "Set variable \"{{ action.name }}\""
   },
   "role": "Role",
+  "user": "User",
   "noMentionsActionNote": "No data is available for this list. While logged in, add a webhook or manually insert mentions in the message to populate it.",
   "seconds": "Seconds",
   "deleteMessageIdNote": {
     "true": "<0/> Variable <1>messageId</1> is set as <1>{{value}}</1>.",
     "false": "<0/> Variable <1>messageId</1> is not set."
   },
+  "description": "Description",
+  "default": "Default",
   "type": "Type",
   "value": "Value",
+  "valueHidden": "Value (hidden)",
   "valueFromReturn": "Attribute of previous return",
   "actionN": "Action {{n}}",
   "actionNText": "Action {{n}} - {{text}}",
