feat(site): combined add button for messages

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -239,8 +239,10 @@
   "removeReference": "Remove Reference",
   "setReference": "Set Reference",
   "changeReference": "Change Reference",
+  "add": "Add",
   "addEmbed": "Add Embed",
   "addRow": "Add Row",
+  "addPoll": "Add Poll",
   "addDefaultValue": "Add Default Value",
   "addOption": "Add Option",
   "components": "Components",
