feat(site): set message flags

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -313,7 +313,18 @@
   "editFlow": "Edit Flow",
   "addAction": "Add Action",
   "backup": "Backup",
+  "flags": "Flags",
   "flagsOptional": "Flags (optional)",
+  "messageFlagsNote": "Flags are optional message features that can be enabled or disabled.",
+  "messageFlagsNoteSuppressNotifications": "Any mentions in the message will not be delivered to users.",
+  "messageFlagsNoteSuppressEmbeds": "All embeds, including link embeds, will not be shown.",
+  "messageFlag": {
+    "4": "Hide embeds",
+    "32": "Has thread",
+    "64": "Ephemeral",
+    "4096": "Silent",
+    "8192": "Is voice message"
+  },
   "random": "Random",
   "autoArchiveDuration": "Auto Archive Duration",
   "rowEmpty": "Must contain at least one component (button/select)",
@@ -322,6 +333,7 @@
   "optionsEmpty": "Must contain at least one select option",
   "embedEmpty": "Must contain text or an image",
   "embedsTooLarge": "Embeds must contain at most 6000 characters total (currently {{count}} too many)",
+  "embedsHidden": "You have the \"Hide embeds\" flag enabled, so all embeds will be hidden.",
   "history": "History",
   "noHistory": "This editor session has no history recorded.",
   "historyNote": "Here you can view and manage the past 15 autosaved instances of editor history (or 30 with Deluxe). Pressing \"Reset Editor\" will reset everything in the left pane, but it will not wipe history (until it is overwritten by your new changes). Just remember that history is <bold>not persisted</bold> when you reload the page.",
