--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -313,6 +313,11 @@
   "editFlow": "Edit Flow",
   "addAction": "Add Action",
   "backup": "Backup",
+  "content": "Content",
+  "avatarUrl": "Avatar URL",
+  "profileImmutable": "Profile info cannot be changed for existing messages.",
+  "filesCount": "Files ({{ count }}/10)",
+  "addFile": "Add File",
   "flags": "Flags",
   "flagsOptional": "Flags (optional)",
   "messageFlagsNote": "Flags are optional message features that can be enabled or disabled.",
