feat(site)!: store new components
semi-breaking: removes the optional querydata `components` property; merges flow data into `messages[n].data.components`. all components are expected to exist server-side, editor maintains synchronicity

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -309,9 +309,9 @@
   "actionN": "Action {{n}}",
   "actionNText": "Action {{n}} - {{text}}",
   "flowLink": "Flow (<0>what's a flow?</0>)",
-  "addFlow": "Add Flow",
   "editFlow": "Edit Flow",
   "addAction": "Add Action",
+  "editComponent": "Edit Component",
   "backup": "Backup",
   "content": "Content",
   "avatarUrl": "Avatar URL",
