feat(site): send & trim components

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -27,6 +27,9 @@
   "logInToSaveBackups": "Log in to save permanent backups.",
   "savedAutomatically": "Saved automatically",
   "saveBackup": "Save Backup",
+  "sendMessageN_one": "Send Message",
+  "sendMessageN_other": "Send Messages",
+  "messages": "Messages",
   "send": "Send",
   "sendToAll": "Send to All",
   "sendAll": "Send All",
