feat(site): link embeds i18n, md, char limit

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -118,6 +118,12 @@
   "never": "Never",
   "joinedDiscohook": "Joined Discohook",
   "linkEmbedsPremiumNote": "You've uncovered a Deluxe feature! <0>Read more about link embeds here.</0>",
+  "linkEmbedsPremiumReadOnly": "You're currently in read-only mode. You can play around in the editor, but in order to save a link, you will need to subscribe to <0>Discohook Deluxe</Link>.",
+  "linkEmbedsNoVideoAndDescription": "Only users on Android can view the description when there is a video set.",
+  "linkEmbedsImageLimit": "Link embeds can have one thumbnail or up to 4 large images, but not both.",
+  "linkEmbedsNoVideoAndImage": "Link embeds cannot have a video paired with an image. Remove your video in order to add images.",
+  "linkEmbedsNoImagesAndVideo": "Link embeds cannot have a video paired with an image. Remove all images in order to add a video.",
+  "linkEmbedsVideoUrl": "URL (direct link or YouTube)",
   "donate": "Donate",
   "deluxe": "Deluxe",
   "lifetime": "Lifetime",
@@ -251,7 +257,7 @@
   "components": "Components",
   "addComponent": "Add Component",
   "addComponents": "Add Components",
-  "componentsNoWebhook": "Component availability is dependent on the type of webhook that you send a message with. For link buttons, the webhook must be owned by a bot, but to send other buttons and select menus, the webhook must be owned by the Discohook application (this website/its bot). Add a webhook for more information.",
+  "componentsNoWebhook": "Components need a certain type of webhook to work properly. For link buttons, the webhook must be owned by a bot, but for regular buttons and select menus, the webhook must be owned by the Discohook application (this website/its bot). Add a webhook for more information.",
   "componentsPossibleWebhook": "One or more of your webhooks are owned by an app, but not Discohook, so you can only add link buttons. Add a webhook owned by the Discohook bot to be able to use more types of components.",
   "componentsNoUsableWebhook": "None of your webhooks are compatibile with components. Add a webhook owned by the Discohook bot.",
   "component": {
@@ -275,7 +281,22 @@
   "label": "Label",
   "disabled": "Disabled",
   "url": "URL",
+  "addUrl": "Add URL",
   "style": "Style",
+  "embed": "Embed",
+  "author": "Author",
+  "sidebarColor": "Sidebar Color",
+  "clickToSet": "Click to Set",
+  "provider": "Provider",
+  "providerUrl": "Provider URL",
+  "body": "Body",
+  "title": "Title",
+  "redirectUrl": "Redirect URL",
+  "remove": "Remove",
+  "images": "Images",
+  "useLargeImages": "Use large images",
+  "addImage": "Add Image",
+  "video": "Video",
   "actionTypeText": "Action Type",
   "actionType": {
     "0": "Do nothing",
