feat: component creation handoff

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -283,6 +283,9 @@
   "url": "URL",
   "addUrl": "Add URL",
   "style": "Style",
+  "saveDraft": "Save Draft",
+  "editMessage": "Edit Message",
+  "componentSaveEditMessageTip": "Tip: If you're only editing flows, you don't need to press Edit Message.",
   "embed": "Embed",
   "author": "Author",
   "sidebarColor": "Sidebar Color",
