chore(site): localize position label

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -281,6 +281,7 @@
   "label": "Label",
   "disabled": "Disabled",
   "url": "URL",
+  "position": "Position",
   "addUrl": "Add URL",
   "style": "Style",
   "saveDraft": "Save Draft",
