--- a/packages/bot/src/i18n/fr.json
+++ b/packages/bot/src/i18n/fr.json
@@ -3,7 +3,7 @@
     "invite": {
       "name": "ajouter"
     },
-    "webhooks": {
+    "webhook": {
       "description": "Webhooks beheren",
       "options": {
         "create": {
