--- a/packages/bot/src/i18n/nl.json
+++ b/packages/bot/src/i18n/nl.json
@@ -66,7 +66,7 @@
       "name": "toevoegen",
       "description": "Link om mij toe te voegen aan een andere server"
     },
-    "webhooks": {
+    "webhook": {
       "description": "Webhooks beheren",
       "options": {
         "create": {
