chore(site): cancel localization

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -7,6 +7,7 @@
   "logOut": "Log Out",
   "name": "Name",
   "save": "Save",
+  "cancel": "Cancel",
   "ok": "OK",
   "edit": "Edit",
   "delete": "Delete",
